Build a Fraction: Shapes: Fixed: When card stacks have different sizes, the parent toolbox containers don't line up
Build a Fraction: Show divisions when going into the collection box
Build a Fraction: Removed unused code for making target containers flash when matched
Build a Fraction: Shapes: Use green images for left/right buttons that change number of divisions in container
Fraction Matcher: Fade in and out on refresh
Fraction Matcher: Save progress when pushing the "back" button
# 1.00.11 (66407) Jul 28, 2012
Build a Fraction: Shapes: Make dotted lines disappear when going into toolbox
Build a Fraction: Shapes: Make +/- buttons disappear when going into toolbox.
Build a Fraction: Shapes: Fixed: fifths pie pieces don't fit square in toolbox container
Build a Fraction: Shapes: When choosing target angle, don't match on container nodes that are in scoring cells
Build a Fraction: Shapes: Show shadows when pieces animating back to toolbox
Build a Fraction: Shapes: Made it so the piece won't rotate further than necessary
Build a Fraction: Shapes: Fixed: Containers are always moving home even if not dropped on toolbox or scoring cells
Build a Fraction: Shapes: Pie shapes: stack up and to the right for containers (as we do for shapes)
Build a Fraction: Shapes: Fixed: Exception when no available location to rotate for
Build a Fraction: Shapes: Rotate when closest match site changed for fractions > 1
Build a Fraction: Shapes: Make pie piece stay near mouse when grabbed from toolbox
Build a Fraction: Shapes: Fixed: Bar shapes not centered vertically in toolbox any more
Build a Fraction: Shapes: Fixed: Pieces don't line up properly with the containers
Build a Fraction: Shapes: If the user got the incorrect answer, send back to the play area
# 1.00.10 (66281) Jul 26, 2012
Build a Fraction: Added shadows for dragged bar pieces
Build a Fraction: Added shadows for dragged pie pieces
Build a Fraction: Fixed: Stars should not clear on "refresh"