@@ -1,3 +1,4 @@
+Build a Fraction: Shapes: Show more complicated patterns for levels 6-10 on the level selection screen icons
 Build a Fraction: Shapes: Fixed: When card stacks have different sizes, the parent toolbox containers don't line up
 Build a Fraction: Show divisions when going into the collection box
 Build a Fraction: Removed unused code for making target containers flash when matched
